--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "httpx>=0.28.1",
     "passlib>=1.7.4",
     "psycopg2-binary>=2.9.10",
+    "pydantic-settings>=2.8.1",
     "pydantic[email]>=2.10.6",
     "pytest>=8.3.5",
     "pytest-asyncio>=0.25.3",
