--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,10 +6,13 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "aiofiles>=24.1.0",
+    "alembic>=1.15.1",
     "bcrypt>=4.3.0",
     "cryptography>=44.0.2",
+    "email-validator>=2.2.0",
     "fastapi[standard]>=0.115.11",
     "httpx>=0.28.1",
+    "jinja2>=3.1.6",
     "passlib>=1.7.4",
     "psycopg2-binary>=2.9.10",
     "pydantic-settings>=2.8.1",
@@ -18,5 +21,25 @@ dependencies = [
     "pytest-asyncio>=0.25.3",
     "python-jose>=3.4.0",
     "python-multipart>=0.0.20",
+    "sqlalchemy>=2.0.39",
+    "sqlmodel>=0.0.24",
     "uvicorn[standard]>=0.34.0",
+]
+
+[tool.ruff.lint]
+select = [
+    "E",      # pycodestyle errors
+    "W",      # pycodestyle warnings
+    "F",      # pyflakes
+    "I",      # isort
+    "B",      # flake8-bugbear
+    "C4",     # flake8-comprehensions
+    "UP",     # pyupgrade
+    "ARG001", # unused arguments in functions
+]
+ignore = [
+    "E501", # line too long, handled by black
+    "B008", # do not perform function calls in argument defaults
+    "W191", # indentation contains tabs
+    "B904", # Allow raising exceptions without from e, for HTTPException
 ]
