--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ yarn-error.log
 *.log
 package-lock.json
 yarn.lock
-dist/
+
 # Git files
 *.bak
 *.swp
@@ -59,7 +59,7 @@ Thumbs.db
 
 # production
 /build
-
+/dist
 # misc
 .DS_Store
 *.pem
